Restructuring LESS files

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>colors.less - Create color schemes with LESS</title>
     
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="css/colorpicker.css">
     <link rel="stylesheet/less" type="text/css" href="less/style.less">
     
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
