--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
   <head>
     <title>colors.less - Create color schemes with LESS</title>
     
-    <link rel="stylesheet" type="text/css" href="css/normalize.css">
-    <link rel="stylesheet" type="text/css" href="css/colorpicker.css">
-    <link rel="stylesheet/less" type="text/css" href="less/style.less">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet/less" type="text/css" href="less/demo.less">
     
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
     <script src="js/Color.Picker.Classic.js" type="text/javascript"></script> 
