Finally fixed the demo :shipit:

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <section id="intro">
         <h1>colors.less</h1>
         <h2>Create color schemes with LESS</h2>
-        <p>I like to use formulaic color schemes in my web development sometimes, but generating them with tools like <a href="https://kuler.adobe.com/">kuler</a> is not very maintainable. So I decided to write some LESS color formulas to generate some of the most common color schemes for me, and share it with you.</p>
+        <p>I like to use formulaic color schemes in my web development sometimes, but generating them with tools like <a href="https://kuler.adobe.com/">kuler</a> is not very maintainable. So I decided to write some LESS color formulas to generate some of the most common color schemes, and share it with you.</p>
       </section>
       
       <section id="docs">
