--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </ul>
         
         <h3>Usage</h3>
-        <p>Each color scheme takes two parameters, <code>@baseColor</code> and <code>@difference</code>, <code>@distance</code>, or <code>@angle</code>. Except for the complimentary scheme, which only take <code>@baseColor</code>.</p>
+        <p>Each color scheme takes two parameters, <code>@baseColor</code> and <code>@difference</code>, <code>@distance</code>, or <code>@angle</code>. Except for the complimentary scheme, which only takes <code>@baseColor</code>.</p>
         
         <h3>Dependancies</h3>
         <p>The only dependancy is <a href="http://lesscss.org/">LESS</a>.
