--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet/less" type="text/css" href="less/demo.less">
-    
+    <link href='http://fonts.googleapis.com/css?family=Source+Code+Pro' rel='stylesheet' type='text/css'>
+
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
     <script src="js/Color.Picker.Classic.js" type="text/javascript"></script> 
     <script src="js/Color.Space.js" type="text/javascript"></script> 
